--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ ext {
         slf4j:                  '2.0.0-alpha0',
         spring:                 '5.1.9.RELEASE',
         tika:                   '1.21',
+        jsoup:                  '1.12.1',
 
         junit:                  '5.5.2',
         junit4Dataprovider:     '2.4',
