--- a/vividus-test-context/build.gradle
+++ b/vividus-test-context/build.gradle
@@ -1,7 +1,10 @@
 project.description = 'Vividus test context'
 
 dependencies {
+    implementation(group: 'javax.inject', name: 'javax.inject', version: versions.javaxInject)
+
     testImplementation platform(group: 'org.junit', name: 'junit-bom', version: versions.junit)
     testImplementation(group: 'org.junit.jupiter', name: 'junit-jupiter')
     testImplementation(group: 'org.mockito', name: 'mockito-core', version: versions.mockito)
+    testImplementation(group: 'org.mockito', name: 'mockito-junit-jupiter', version: versions.mockito)
 }
